[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Sketch Gothic School.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/UI/StartGameScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Enchanted Land.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=5]
size = 175
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[node name="StartGameScreen" type="Control"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Adventures" type="Label" parent="CanvasLayer"]
margin_left = 200.0
margin_top = 127.0
margin_right = 1781.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 5 )
text = "The unremarkable adventures "
align = 1

[node name="of" type="Label" parent="CanvasLayer"]
margin_left = 936.0
margin_top = 336.0
margin_right = 1022.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 6 )
text = "of"

[node name="Goodenough, the sword" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -879.0
margin_top = 446.0
margin_right = 943.0
margin_bottom = 741.0
custom_fonts/font = SubResource( 1 )
text = "Goodenough, the sword"
align = 1

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -263.0
margin_top = -288.0
margin_right = 276.0
margin_bottom = -156.0

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 483.0
margin_bottom = 132.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "   Start New Game   "

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
margin_left = 397.0
margin_right = 590.0
margin_bottom = 132.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_left = 487.0
margin_right = 700.0
margin_bottom = 132.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "   Quit   "

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
